@@ -41,30 +41,6 @@ patchPluginXml {
       <em>most HTML tags may be used</em>"""
 }
 
-List<String> opensArgs = [
-  '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.util=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.util.function=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.time=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.time.temporal=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.time.chrono=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.time.format=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-  '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.nio.file=ALL-UNNAMED',
-  '--add-opens', 'java.base/java.net=ALL-UNNAMED',
-  '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
-  '-ea'
-]
-
-runIde {
-  jvmArgs = opensArgs
-}
 
 testlogger {
   theme 'mocha'
@@ -72,7 +48,6 @@ testlogger {
 }
 
 test {
-  jvmArgs = opensArgs
   ignoreFailures = true
 
   finalizedBy jacocoTestReport
